--- a/weeklyDebrief/weeklyDebrief/Main.storyboard
+++ b/weeklyDebrief/weeklyDebrief/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="SL5-ob-ZNu">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,43 +14,39 @@
             <objects>
                 <collectionViewController id="tX0-fY-2TL" userLabel="Subject" customClass="SubjectCollectionViewController" customModule="weeklyDebrief" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="1Ow-TD-8cX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.87947481870651245" green="0.89424830675125122" blue="0.8023027777671814" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yy6-KA-Bkj">
-                            <size key="itemSize" width="182" height="182"/>
+                            <size key="itemSize" width="372" height="372"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
-                        <imageView key="backgroundView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" id="6I5-wp-mJq">
-                            <rect key="frame" x="0.0" y="-64" width="375" height="667"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="t3M-aS-HOR" customClass="SubjectCollectionViewCell" customModule="weeklyDebrief" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="182" height="182"/>
+                                <rect key="frame" x="1.6666666666666667" y="0.0" width="372" height="372"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="182" height="182"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="372" height="372"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kER-ZU-zpb">
+                                            <rect key="frame" x="20" y="20" width="332" height="327"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="327" id="fJi-jI-hSq"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flt-NU-2aR">
-                                            <rect key="frame" x="0.0" y="58" width="182" height="67"/>
+                                            <rect key="frame" x="0.0" y="58" width="372" height="257"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kER-ZU-zpb">
-                                            <rect key="frame" x="20" y="20" width="142" height="142"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="142" id="fJi-jI-hSq"/>
-                                            </constraints>
-                                        </imageView>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="flt-NU-2aR" firstAttribute="top" secondItem="kER-ZU-zpb" secondAttribute="bottom" constant="-104" id="1Us-Ak-IAz"/>
+                                    <constraint firstItem="flt-NU-2aR" firstAttribute="top" secondItem="kER-ZU-zpb" secondAttribute="bottom" constant="-289" id="1Us-Ak-IAz"/>
                                     <constraint firstAttribute="trailing" secondItem="flt-NU-2aR" secondAttribute="trailing" id="7c6-A3-4W5"/>
                                     <constraint firstAttribute="trailing" secondItem="kER-ZU-zpb" secondAttribute="trailing" constant="20" id="Bc8-A3-DOG"/>
                                     <constraint firstAttribute="bottom" secondItem="flt-NU-2aR" secondAttribute="bottom" constant="57" id="DF1-dD-VeG"/>
@@ -73,7 +69,47 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w5a-iQ-AF2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032.8" y="1.3493253373313345"/>
+            <point key="canvasLocation" x="1032.8" y="0.73891625615763545"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bk6-Jw-dZp">
+            <objects>
+                <viewController id="Wew-MO-JdK" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="F3b-8H-za4"/>
+                        <viewControllerLayoutGuide type="bottom" id="rMr-9a-NTa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gvb-Yd-Mkj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vh4-em-ITe">
+                                <rect key="frame" x="0.0" y="10" width="375" height="802"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <imageView key="tableHeaderView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="nYD-Ql-Hym">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="52" id="qeu-IY-XFq">
+                                        <rect key="frame" x="0.0" y="403" width="375" height="52"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qeu-IY-XFq" id="aII-9z-5d0">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="51.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.87947481870651245" green="0.89424830675125122" blue="0.8023027777671814" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hsz-Yh-Uk6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1861.5999999999999" y="0.73891625615763545"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TgE-Nk-Vir">
@@ -81,7 +117,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SL5-ob-ZNu" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="iq2-8U-k8Z">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -94,7 +130,4 @@
             <point key="canvasLocation" x="93.599999999999994" y="1.3493253373313345"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="background" width="250" height="444"/>
-    </resources>
 </document>
